@@ -39,7 +39,7 @@ public class frmC140 extends frmBase {
     private MDChipParams.C140 oldParam = new MDChipParams.C140();
     private final FrameBuffer frameBuffer = new FrameBuffer();
 
-    static Preferences prefs = Preferences.userNodeForPackage(frmC140.class);
+    static final Preferences prefs = Preferences.userNodeForPackage(frmC140.class);
 
     public frmC140(frmMain frm, int chipId, int zoom, MDChipParams.C140 newParam, MDChipParams.C140 oldParam) {
         super(frm);
@@ -142,7 +142,7 @@ public class frmC140 extends frmBase {
     private int searchC140Note(int freq) {
         double m = Double.MAX_VALUE;
 
-        int clock = audio.mds.getChipInfo(C140Inst.class).clock;
+        int clock = audio.plugin.mds.getChipInfo(C140Inst.class).clock;
         if (clock >= 1000000)
             clock = clock / 384;
 
@@ -186,8 +186,8 @@ public class frmC140 extends frmBase {
     }
 
     public void screenChangeParams() {
-        byte[] c140State = audio.chipRegister.chip(C140Chip.class).read(chipId);
-        boolean[] c140KeyOn = audio.chipRegister.chip(C140Chip.class).getKeyOn(chipId);
+        byte[] c140State = audio.plugin.chipRegister.chip(C140Chip.class).read(chipId);
+        boolean[] c140KeyOn = audio.plugin.chipRegister.chip(C140Chip.class).getKeyOn(chipId);
         if (c140State != null) {
             for (int ch = 0; ch < 24; ch++) {
                 int frequency = c140State[ch * 16 + 2] * 256 + c140State[ch * 16 + 3];
@@ -196,8 +196,8 @@ public class frmC140 extends frmBase {
 
                 newParam.channels[ch].note = searchC140Note(frequency) + 1;
                 if (c140KeyOn[ch]) {
-                    newParam.channels[ch].volumeL = Math.min(Math.max((int) (l / 13.4) * 3, 0), 19);
-                    newParam.channels[ch].volumeR = Math.min(Math.max((int) (r / 13.4) * 3, 0), 19);
+                    newParam.channels[ch].volumeL = Math.clamp((int) (l / 13.4) * 3, 0, 19);
+                    newParam.channels[ch].volumeR = Math.clamp((int) (r / 13.4) * 3, 0, 19);
                 } else {
                     newParam.channels[ch].volumeL -= newParam.channels[ch].volumeL > 0 ? 1 : 0;
                     newParam.channels[ch].volumeR -= newParam.channels[ch].volumeR > 0 ? 1 : 0;
