@@ -40,7 +40,7 @@ public class frmSegaPCM extends frmBase {
     private MDChipParams.SegaPcm oldParam = null;
     private final FrameBuffer frameBuffer = new FrameBuffer();
 
-    static Preferences prefs = Preferences.userNodeForPackage(frmSegaPCM.class);
+    static final Preferences prefs = Preferences.userNodeForPackage(frmSegaPCM.class);
 
     public frmSegaPCM(frmMain frm, int chipId, int zoom, MDChipParams.SegaPcm newParam, MDChipParams.SegaPcm oldParam) {
         super(frm);
@@ -192,8 +192,8 @@ public class frmSegaPCM extends frmBase {
 //            }
 //        }
 
-        byte[] segapcmReg = audio.chipRegister.chip(SegaPcmChip.class).read(chipId);
-        boolean[] segapcmKeyOn = audio.chipRegister.chip(SegaPcmChip.class).getKeyOn(chipId);
+        byte[] segapcmReg = audio.plugin.chipRegister.chip(SegaPcmChip.class).read(chipId);
+        boolean[] segapcmKeyOn = audio.plugin.chipRegister.chip(SegaPcmChip.class).getKeyOn(chipId);
         if (segapcmReg != null) {
             for (int ch = 0; ch < 16; ch++) {
                 int l = segapcmReg[ch * 8 + 2] & 0x7f;
@@ -203,8 +203,8 @@ public class frmSegaPCM extends frmBase {
 
                 if (segapcmKeyOn[ch]) {
                     newParam.channels[ch].note = Common.searchSegaPCMNote(ml);
-                    newParam.channels[ch].volumeL = Math.min(Math.max((l * 1) >> 1, 0), 19);
-                    newParam.channels[ch].volumeR = Math.min(Math.max((r * 1) >> 1, 0), 19);
+                    newParam.channels[ch].volumeL = Math.clamp((l * 1) >> 1, 0, 19);
+                    newParam.channels[ch].volumeR = Math.clamp((r * 1) >> 1, 0, 19);
                 } else {
                     newParam.channels[ch].volumeL -= newParam.channels[ch].volumeL > 0 ? 1 : 0;
                     newParam.channels[ch].volumeR -= newParam.channels[ch].volumeR > 0 ? 1 : 0;
