@@ -42,7 +42,7 @@ public class frmSN76489 extends frmBase {
     private final MDChipParams.SN76489 oldParam;
     private final FrameBuffer frameBuffer = new FrameBuffer();
 
-    static Preferences prefs = Preferences.userNodeForPackage(frmSN76489.class);
+    static final Preferences prefs = Preferences.userNodeForPackage(frmSN76489.class);
 
     public frmSN76489(frmMain frm, int chipId, int zoom, MDChipParams.SN76489 newParam, MDChipParams.SN76489 oldParam) {
         super(frm);
@@ -112,12 +112,12 @@ public class frmSN76489 extends frmBase {
 
 
     public void screenChangeParams() {
-        int[] psgRegister = audio.chipRegister.chip(Sn76489Chip.class).read(chipId);
+        int[] psgRegister = audio.plugin.chipRegister.chip(Sn76489Chip.class).read(chipId);
         int[] psgRegister1 = null;
-        int psgRegisterPan = audio.chipRegister.chip(Sn76489Chip.class).getPan(chipId);
-        int[][] psgVol = audio.chipRegister.chip(Sn76489Chip.class).getVolumes(chipId);
+        int psgRegisterPan = audio.plugin.chipRegister.chip(Sn76489Chip.class).getPan(chipId);
+        int[][] psgVol = audio.plugin.chipRegister.chip(Sn76489Chip.class).getVolumes(chipId);
         int[][] psgVol1 = null;
-        boolean NGPFlag = audio.chipRegister.chip(Sn76489Chip.class).getFlag();
+        boolean NGPFlag = audio.plugin.chipRegister.chip(Sn76489Chip.class).getFlag();
 
         if (NGPFlag && chipId == 1) {
             for (int ch = 0; ch < 4; ch++) {
@@ -132,32 +132,32 @@ public class frmSN76489 extends frmBase {
         } else {
             if (psgRegister != null) {
                 if (NGPFlag) {
-                    psgVol1 = audio.chipRegister.chip(Sn76489Chip.class).getVolumes(1);
-                    psgRegister1 = audio.chipRegister.chip(Sn76489Chip.class).read(1);
+                    psgVol1 = audio.plugin.chipRegister.chip(Sn76489Chip.class).getVolumes(1);
+                    psgRegister1 = audio.plugin.chipRegister.chip(Sn76489Chip.class).read(1);
 
                     //Tone Ch
                     for (int ch = 0; ch < 3; ch++) {
                         if (psgRegister[ch * 2 + 1] != 15) {
-                            float fTone = audio.mds.getChipInfo(Sn76489Inst.class).clock / (2.0f * psgRegister[ch * 2] * 16.0f);
+                            float fTone = audio.plugin.mds.getChipInfo(Sn76489Inst.class).clock / (2.0f * psgRegister[ch * 2] * 16.0f);
 
                             newParam.channels[ch].note = searchSSGNote(fTone);
                         } else {
                             newParam.channels[ch].note = -1;
                         }
 
-                        newParam.channels[ch].volumeL = Math.min(Math.max((int) ((psgVol[ch][0]) / (15.0 / 19.0)), 0), 19);
-                        newParam.channels[ch].volumeR = Math.min(Math.max((int) ((psgVol1[ch][0]) / (15.0 / 19.0)), 0), 19);
-                        newParam.channels[ch].pan = Math.min(Math.max(newParam.channels[ch].volumeR, 0), 15) * 0x10 +
-                                Math.min(Math.max(newParam.channels[ch].volumeL, 0), 15);
+                        newParam.channels[ch].volumeL = Math.clamp((int) ((psgVol[ch][0]) / (15.0 / 19.0)), 0, 19);
+                        newParam.channels[ch].volumeR = Math.clamp((int) ((psgVol1[ch][0]) / (15.0 / 19.0)), 0, 19);
+                        newParam.channels[ch].pan = Math.clamp(newParam.channels[ch].volumeR, 0, 15) * 0x10 +
+                                Math.clamp(newParam.channels[ch].volumeL, 0, 15);
                     }
 
                     //Noise Ch
                     newParam.channels[3].note = psgRegister1[6];
                     newParam.channels[3].freq = psgRegister1[4];//ch3Freq
-                    newParam.channels[3].volumeL = Math.min(Math.max((int) ((psgVol[3][0]) / (15.0 / 19.0)), 0), 19);
-                    newParam.channels[3].volumeR = Math.min(Math.max((int) ((psgVol1[3][0]) / (15.0 / 19.0)), 0), 19);
-                    newParam.channels[3].pan = Math.min(Math.max(newParam.channels[3].volumeR, 0), 15) * 0x10 +
-                            Math.min(Math.max(newParam.channels[3].volumeL, 0), 15);
+                    newParam.channels[3].volumeL = Math.clamp((int) ((psgVol[3][0]) / (15.0 / 19.0)), 0, 19);
+                    newParam.channels[3].volumeR = Math.clamp((int) ((psgVol1[3][0]) / (15.0 / 19.0)), 0, 19);
+                    newParam.channels[3].pan = Math.clamp(newParam.channels[3].volumeR, 0, 15) * 0x10 +
+                            Math.clamp(newParam.channels[3].volumeL, 0, 15);
                 } else {
                     //Tone Ch
                     for (int ch = 0; ch < 3; ch++) {
@@ -167,8 +167,8 @@ public class frmSN76489 extends frmBase {
                             newParam.channels[ch].note = -1;
                         }
 
-                        newParam.channels[ch].volumeL = Math.min(Math.max((int) ((psgVol[ch][0]) / (15.0 / 19.0)), 0), 19);
-                        newParam.channels[ch].volumeR = Math.min(Math.max((int) ((psgVol[ch][1]) / (15.0 / 19.0)), 0), 19);
+                        newParam.channels[ch].volumeL = Math.clamp((int) ((psgVol[ch][0]) / (15.0 / 19.0)), 0, 19);
+                        newParam.channels[ch].volumeR = Math.clamp((int) ((psgVol[ch][1]) / (15.0 / 19.0)), 0, 19);
                         newParam.channels[ch].pan = (psgRegisterPan >> ch) & 0x11;
                         newParam.channels[ch].pan = ((newParam.channels[ch].pan) & 0x1) | (newParam.channels[ch].pan >> 3);
                     }
@@ -176,8 +176,8 @@ public class frmSN76489 extends frmBase {
                     //Noise Ch
                     newParam.channels[3].note = psgRegister[6];
                     newParam.channels[3].freq = psgRegister[4];//ch3Freq
-                    newParam.channels[3].volumeL = Math.min(Math.max((int) ((psgVol[3][0]) / (15.0 / 19.0)), 0), 19);
-                    newParam.channels[3].volumeR = Math.min(Math.max((int) ((psgVol[3][1]) / (15.0 / 19.0)), 0), 19);
+                    newParam.channels[3].volumeL = Math.clamp((int) ((psgVol[3][0]) / (15.0 / 19.0)), 0, 19);
+                    newParam.channels[3].volumeR = Math.clamp((int) ((psgVol[3][1]) / (15.0 / 19.0)), 0, 19);
                     newParam.channels[3].pan = (psgRegisterPan >> 3) & 0x11;
                     newParam.channels[3].pan = ((newParam.channels[3].pan) & 0x1) | (newParam.channels[3].pan >> 3);
                 }
@@ -191,7 +191,7 @@ public class frmSN76489 extends frmBase {
         int tp = SN76489Type ? 1 : 0;
         MDChipParams.Channel osc;
         MDChipParams.Channel nsc;
-        boolean NGPFlag = audio.chipRegister.chip(Sn76489Chip.class).getFlag();
+        boolean NGPFlag = audio.plugin.chipRegister.chip(Sn76489Chip.class).getFlag();
 
         for (int c = 0; c < 3; c++) {
             osc = oldParam.channels[c];
@@ -266,7 +266,7 @@ public class frmSN76489 extends frmBase {
                 int ch = (py / 8) - 1;
                 if (ch < 0) return;
 
-                boolean NGPFlag = audio.chipRegister.chip(Sn76489Chip.class).getFlag();
+                boolean NGPFlag = audio.plugin.chipRegister.chip(Sn76489Chip.class).getFlag();
 
                 if (ev.getButton() == MouseEvent.BUTTON1) {
                     // Mask.
@@ -284,7 +284,7 @@ public class frmSN76489 extends frmBase {
         }
     };
 
-    private int searchPSGNote(int freq) {
+    private static int searchPSGNote(int freq) {
         int m = Integer.MAX_VALUE;
         int n = 0;
 
