@@ -8,11 +8,13 @@ import java.util.List;
 import dotnet4j.io.File;
 import mdplayer.Common.EnmArcType;
 import mdplayer.PlayList;
-import mdplayer.driver.Vgm;
-import mdplayer.driver.sid.Sid;
+import mdplayer.driver.sid.SidDriver;
+import mdplayer.driver.sid.SidMdDriver2;
 import mdplayer.plugin.Plugin;
 import mdplayer.plugin.SIDPlugin;
 import mdplayer.properties.Resources;
+import musicDriverInterface.MetaData;
+import musicDriverInterface.MetaData.Tag;
 import vavi.util.archive.Archive;
 import vavi.util.archive.Entry;
 
@@ -33,10 +35,10 @@ public class SIDFileFormat extends BaseFileFormat {
     @Override
     public List<PlayList.Music> getMusic(String file, byte[] buf, String zipFile /* = null */, Archive archive, Entry entry /* = null */) {
         List<PlayList.Music> musics = new ArrayList<>();
-        Sid sid = new Sid();
-        Vgm.Gd3 gd3 = sid.getGD3Info(buf);
 
-        for (int s = 0; s < sid.songs; s++) {
+        SidDriver sid = new SidMdDriver2();
+        MetaData metaData = sid.getMetaData(buf);
+        for (int s = 0; s < sid.getSongs(); s++) {
             PlayList.Music music = new PlayList.Music();
             music.format = this;
             music.fileName = file;
@@ -44,15 +46,15 @@ public class SIDFileFormat extends BaseFileFormat {
             music.arcType = EnmArcType.unknown;
             if (zipFile != null && zipFile.isEmpty())
                 music.arcType = zipFile.toLowerCase().lastIndexOf(".zip") != -1 ? EnmArcType.ZIP : EnmArcType.LZH;
-            music.title = "%s - Trk %d".formatted(gd3.trackName, s + 1);
-            music.titleJ = "%s - Trk %d".formatted(gd3.trackName, s + 1);
+            music.title = "%s - Trk %d".formatted(metaData.getFirst(Tag.Title), s + 1);
+            music.titleJ = "%s - Trk %d".formatted(metaData.getFirst(Tag.Title), s + 1);
             music.game = "";
             music.gameJ = "";
-            music.composer = gd3.composer;
-            music.composerJ = gd3.composer;
+            music.composer = metaData.getFirst(Tag.Composer);
+            music.composerJ = metaData.getFirst(Tag.Composer);
             music.vgmby = "";
             music.converted = "";
-            music.notes = gd3.notes;
+            music.notes = metaData.getFirst(Tag.Note);
             music.songNo = s;
 
             musics.add(music);
@@ -97,7 +99,7 @@ public class SIDFileFormat extends BaseFileFormat {
         if (mc.songNo != -1) {
             PlayList.Music music;
             if (!musics.isEmpty()) {
-                music = musics.get(0);
+                music = musics.getFirst();
                 music.songNo = mc.songNo;
                 music.title = mc.title;
                 music.titleJ = mc.titleJ;
@@ -119,7 +121,7 @@ public class SIDFileFormat extends BaseFileFormat {
             buf = File.readAllBytes(mc.fileName);
         } else {
             try (InputStream reader = archive.getInputStream(entry)) {
-                buf =   reader.readAllBytes();
+                buf = reader.readAllBytes();
             }
         }
 
@@ -130,7 +132,7 @@ public class SIDFileFormat extends BaseFileFormat {
         if (mc.songNo != -1) {
             PlayList.Music music;
             if (!musics.isEmpty()) {
-                music = musics.get(0);
+                music = musics.getFirst();
                 music.songNo = mc.songNo;
                 music.title = mc.title;
                 music.titleJ = mc.titleJ;
@@ -143,5 +145,17 @@ public class SIDFileFormat extends BaseFileFormat {
         }
 
         return musics;
+    }
+
+    @Override
+    public int getMarkSize() {
+        return 0;
+    }
+
+    @Override
+    public boolean isSupported(InputStream is) throws IOException {
+//        if (isCompressedStream(is)) return false;
+//        return Arrays.stream(getExtensions()).anyMatch(e -> java.nio.file.Path.of(SoundUtil.getSource(is)).toString().toLowerCase().endsWith(e));
+        return false;
     }
 }
